Closed
Bug 1016960
Opened 11 years ago
Closed 11 years ago
The tab is duplicated when I move a tab by drag & drop.
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla32
People
(Reporter: alice0775, Assigned: peterv)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
4.82 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
Steps To Reproduce:
1. Open several tabs
2. Move a tab by drag & drop.
Actual Results:
The tab is duplicated.
While I drag a tab, no animation.
Expected Results:
The tab should be moved.
| Reporter | ||
Comment 1•11 years ago
|
||
Regression window(m-i)
Good:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a3f2754fcfb8
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140526074421
Bad:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2587cd80a66e
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 ID:20140526090920
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=a3f2754fcfb8&tochange=2587cd80a66e
Regressed by:
2587cd80a66e Peter Van der Beken — Bug 789261 - Enable WebIDL bindings for Window. r=bz.
Blocks: 789261
| Reporter | ||
Updated•11 years ago
|
Component: Tabbed Browser → DOM
Product: Firefox → Core
Updated•11 years ago
|
OS: Windows 7 → All
Hardware: x86_64 → All
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → peterv
Status: NEW → ASSIGNED
| Assignee | ||
Comment 3•11 years ago
|
||
Writing a test.
| Assignee | ||
Comment 4•11 years ago
|
||
|instanceof ChromeWindow| was failing at http://hg.mozilla.org/mozilla-central/annotate/5add3261493b/browser/base/content/tabbrowser.xml#l3990 because we don't unwrap past the outer in the hasInstance hook :-/.
Attachment #8430109 -
Attachment is obsolete: true
Attachment #8430151 -
Flags: review?(bzbarsky)
Comment 5•11 years ago
|
||
Comment on attachment 8430151 [details] [diff] [review]
v1
r=me if you add /* stopAtOuter = */ comments before those false bits.
Attachment #8430151 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Comment 6•11 years ago
|
||
Comment 9•11 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Updated•11 years ago
|
Flags: in-testsuite+
Updated•11 years ago
|
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•