Bug 1016960 - make |instanceof WebIDLInterface| work with outer windows. r=bz.

--HG--
extra : rebase_source : d62525ea541af2cf832884fb8ea5398595887679